Add proxy to api

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ante-data",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://work-sample-mk-fs.s3-us-west-2.amazonaws.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
